2001-09-07  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ProcessMembers, ProcessFieldDeclaration)
	(ProcessMethodDeclaration, ProcessStaticInitializers): Improve the
	error handling of inner classes and static members - patch 86,
	from bugs 247, 343, 348, 349.
	* src/error.h:
	* src/error.cpp (PrintSTATIC_FIELD_IN_INNER_CLASS):
	Split into:
	(PrintSTATIC_FIELD_IN_INNER_CLASS_NOT_FINAL)
	(PrintSTATIC_FIELD_IN_INNER_CLASS_NOT_CONSTANT):
	Report error messages on static fields in inner types located in
	static context (bug 348).
	(PrintSTATIC_METHOD_IN_INNER_CLASS, PrintSTATIC_TYPE_IN_INNER_CLASS)
	(PrintSTATIC_INITIALIZER_IN_INNER_CLASS):
	Improved the error message wording to be consistent.
	* src/symbol.cpp:
	* src/symbol.h (TypeSymbol): Deleted IsTopLevel(), since it was
	redundant with IsInner().  Fixed IsInner() to correctly detect
	local and anonymous classes in static contexts.
	* src/body.cpp (ProcessClassDeclaration): 
	Local classes should never have the ACC_STATIC attribute set when
	emitting bytecode.
	(ProcessExecutableBodies): Remove cause of assertion failure when
	called after syntax errors in anonymous class (bug 343).
	* src/init.cpp (ProcessVariableInitializer): Fix error detection
	of non-constant static fields in inner classes (bug 247).

2001-09-07  Eric Blake  <ebb9@email.byu.edu>

	* src/error.h:
	* src/error.cpp:
	Added PrintSTRICTFP_NATIVE_METHOD().
	Updated error messages concerning modifiers.
	* src/decl.cpp (ProcessMethodDeclaration): 
	Uncomment code to set methods that are
	implicitly final.
	* src/expr.cpp (GetAnonymousType): 
	Fix code so that anonymous types are implicitly
	final, but never static.
	* src/modifier.cpp: Update calls to improved
	error message for duplicate modifiers.
	(ProcessMethodModifiers): Add check for
	illegal abstract/strictfp and native/strictfp
	pairs - patch 72, from bug 407.
	
2001-09-07  Michael Ernst  <mernst@lcs.mit.edu>

	* src/platform.h (StringConstant):
	* src/platform.cpp (StringConstant):