@@ -111,11 +111,7 @@ JikesOption::JikesOption():
     classpath(NULL),
     sourcepath(NULL),
     directory(NULL),
-#ifdef HAVE_LANGINFO_H
-    encoding(nl_langinfo(CODESET)),
-#else
     encoding(NULL),
-#endif
     nowrite(false),
     deprecation(false),
     O(false),
@@ -126,6 +122,11 @@ JikesOption::JikesOption():
     old_classpath_search_order(false),
     zero_defect(false)
 {
+#ifdef HAVE_LANGINFO_H
+    const char* tmp = nl_langinfo(CODESET);
+    encoding = new char[strlen(tmp) + 1]; // +1 for '\0'
+    strcpy(encoding, tmp);
+#endif
 }
 
 JikesAPI * JikesAPI::instance = NULL;
