@@ -1,3 +1,8 @@
+2001-09-08  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/jikesapi.cpp (JikesOption): Attempt a workaround to a segv
+	encountered with bad encoding from patch 168.
+
 2001-09-07  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/decl.cpp (ProcessMembers, ProcessFieldDeclaration)
